crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_elements_by_attr__remove_elements_by_attr-5.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_elements_by_attr.rs
expression: "test_config(r#\"{ \"removeElementsByAttr\": { \"class\": [\"someClass\", \"anotherClass\"] } }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"19\" height=\"19\" viewBox=\"0 0 19 19\">\n    <rect class=\"someClass\" width=\"19\" height=\"19\"/>\n    <path class=\"anotherClass\" d=\"M1093.5,31.792l-0.72.721-8.27-8.286-8.28,8.286-0.72-.721,8.28-8.286-8.28-8.286,0.72-.721,8.28,8.286,8.27-8.286,0.72,0.721-8.27,8.286Z\" transform=\"translate(-1075 -14)\"/>\n    <rect class=\"someClass extraClass\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 19 19"/>
