crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_elements_by_attr__remove_elements_by_attr-7.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_elements_by_attr.rs
expression: "test_config(r#\"{ \"removeElementsByAttr\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"19\" height=\"19\" viewBox=\"0 0 19 19\">\n    <rect class=\"some-class\" width=\"19\" height=\"19\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 19 19">
    <rect class="some-class" width="19" height="19"/>
</svg>
